--- a/credit-score-backend/.env
+++ b/credit-score-backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI="mongodb+srv://negimanu777:zwMmDIoqOjhs7gec@cluster1.muvclbw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1"
+MONGO_URI="mongodb+srv://negimanu777:5bO2uxpeEzjKSJyp@cluster1.muvclbw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1"
 JWT_SECRET=your_jwt_secret
 PORT=5001
 
